--- a/style.css
+++ b/style.css
@@ -1,13 +1,7 @@
-* {
-  padding: 0;
-  margin: 0;
-  box-sizing: border-box;
-  font-family: 'Oswald', sans-serif;
-}
 body {
   height: 100vh;
   width: 100vw;
-  background: #f2f4f6;
+  background: #000000;
   overflow: hidden;
 }
 .webcam-start-stop {
@@ -15,8 +9,8 @@ body {
   left: 0;
   bottom: 0;
   right: 0;
-  padding: 5px 0;
-  background: #000;
+  padding: 10px 0;
+  background: #ff0000;
   display: flex;
   align-items: center;
   justify-content: space-around;
@@ -26,4 +20,5 @@ body {
   color: #000;
   background: #fff;
   padding: 10px 20px;
+  border-radius: 10px;
 }
