--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   height: 100vh;
   width: 100vw;
-  background: #000000;
+  background: #2c3e50;
   overflow: hidden;
 }
 .webcam-start-stop {
